Fix element spacing on mobile
The text was right up against the edge of the screen for mobile devices.
This commit introduces a gap on either side and ensures that images
don't overflow when shown in posts.

--- a/html/themes/custom/av/styles/base/global.pcss
+++ b/html/themes/custom/av/styles/base/global.pcss
@@ -40,6 +40,10 @@ body {
 }
 
 header, main, footer {
+  @media (max-width: 48rem) {
+    padding: 0 1rem;
+  }
+
   & > div {
     margin-left: auto;
     margin-right: auto;
@@ -113,6 +117,11 @@ header {
     flex-direction: column;
     gap: .5rem;
   }
+}
+
+.post img {
+  max-width: 100%;
+  height: auto;
 }
 
 .resource {
